--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,8 @@
       "src": "reflex_hello_world/reflex_hello_world.py",
       "use": "@vercel/python"
     }
-  ]
+  ],
+  "projectSettings": {
+    "framework": "other"
+  }
 }
